--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -1,5 +1,5 @@
 ﻿/*详细信息页*/
-body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
+body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;font-family:微软雅黑;}
 
 /*详细信息页_头部*/
 .div_head {background-color: #ffffff;width: 1200px;height: 100px;padding-top: 10px;}
