--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -10,6 +10,7 @@
     <input type="hidden" id="PP" />
     <input type="hidden" id="CX" />
     <input type="hidden" id="KS" />
+    <input type="hidden" id="KSID" />
     <div id="myTabContent" class="div_content">
         <div id="divJBXX" class="div_split" style="display: block; text-align: left">
             <span class="span_split">基本信息</span>
