--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -7,10 +7,10 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/CL/CL_JCYZ.js")"></script>
 }
 @section Section_Body {
-    <input type="hidden" id="PP" />
-    <input type="hidden" id="CX" />
-    <input type="hidden" id="KS" />
-    <input type="hidden" id="KSID" />
+    <input type="hidden" id="PP" value="" />
+    <input type="hidden" id="CX" value="" />
+    <input type="hidden" id="KS" value="" />
+    <input type="hidden" id="KSID" value="" />
     <div id="myTabContent" class="div_content">
         <div id="divJBXX" class="div_split" style="display: block; text-align: left">
             <span class="span_split">基本信息</span>
