--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CLCX/CLCX_JC.cshtml
@@ -7,11 +7,13 @@
     <style type="text/css">
 	#divLC .ul_select{width:105px;}
 	#divBSX .ul_select{width:95px;}
+	#divPL .ul_select{width:95px;}
     </style>
 }
 @section Section_Body {
     <div id="divCondition" class="div_condition">
-        <div id="div_condition_body_PP" class="div_condition_body" style="padding-top: 20px;"></div>
+	<div id="div_condition_body_LX" class="div_condition_body" style="padding-top: 20px;"></div>
+        <div id="div_condition_body_PP" class="div_condition_body"></div>
         <div class="div_row_right_jcpp">
              <div id="div_row_right_jcpp_first" class="div_row_right_jcpp_item div_row_right_jcpp_first">
              </div>
@@ -31,12 +33,12 @@
                         </div>
                     </li>
  		    <li class="li_condition_body" style="margin-right:10px;">
-                        <div id="divPLText" class="div_select_out">
-                        <div id="divPLSpan" class="div_select_in">
-                        <span id="spanPL" column="PL" class="span_select spaninput_fontcolor">排量不限</span>
+                        <div id="divPLText" class="div_select_out" style="width:95px;">
+                        <div id="divPLSpan" class="div_select_in" style="width:95px;">
+                        <span id="spanPL" column="PL" class="span_select spaninput_fontcolor" style="width:75px;">排量不限</span>
                         <div class="span_select_arrow"></div>
                         </div>
-                        <div id="divPL" class="div_select_dropdown"></div>
+                        <div id="divPL" class="div_select_dropdown" style="width:75px;"></div>
                         </div>
                     </li>
 		    <li class="li_condition_body" style="margin-right:10px;">
