--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/XXXX_Common.css
@@ -46,7 +46,7 @@ body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;font
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_zjdw{ color: #bc6ba6;font-size: 16px;}
 .div_body .div_body_left .div_body_left_body_right .span_body_left_body_right_yffs{ font-size: 16px;margin-left: 30px; }
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right{ overflow:hidden;height: 36px;width: 100%;padding: 12px 30px;display:inline-block;}
-.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_left{ width: 100px;display: inline-block;text-align: right;vertical-align:top;color:#777;}
+.div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_left{ width: 70px;margin-left:20px;display: inline-block;text-align: right;vertical-align:top;color:#777;}
 .div_body .div_body_left .div_body_left_body_right .p_body_left_body_right .span_body_left_body_right_right_lxdh {font-size: 28px;color: #bc6ba6;}
 
 /*详细信息页_主体_左部_详情*/
