--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -784,7 +784,7 @@
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(212,'/SWFWCX/SWFWCX_SBZL','null')">专利</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(232,'/SWFWCX/SWFWCX_FLZX','null')">法律</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(232,'/SWFWCX/SWFWCX_FLZX','null')">律师</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(235,'/SWFWCX/SWFWCX_ZXFW','null')">咨询</li>
 			</ul>
@@ -830,9 +830,9 @@
 			</ul>
 			<span class="span_body_middle_left_title_small_fw" onclick="OpenCXLB(224,'/SWFWCX/SWFWCX_WZJSTG','null')">IT</span>
 			<ul class="ul_body_middle_left_section" style="height: 20px;">
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(224,'/SWFWCX/SWFWCX_WZJSTG','LB=402')">网站建设</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(224,'/SWFWCX/SWFWCX_WZJSTG','LB=410')">网站建设</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
-				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(224,'/SWFWCX/SWFWCX_WZJSTG','LB=406')">网络推广</li>
+				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(224,'/SWFWCX/SWFWCX_WZJSTG','LB=402')">网络推广</li>
 				<li class="li_body_middle_left_section_fg">/</li> 
 				<li class="li_body_middle_left_section" style="margin-right:0px;" onclick="OpenCXLB(224,'/SWFWCX/SWFWCX_WZJSTG','LB=404')">app开发</li>
 			</ul>
