--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -71,7 +71,7 @@
             <div class="div_wtjj">
                 <div class="div_wtjj_inner" id="div_xxbsc" style="display:none">
                     <table class="table_wtjj">
-                        <tr class="tr_wtjj">
+                        <tr class="tr_wtjj" id="tr_xxbh">
                             <td class="td_wtjj_inner_left">信息编号：</td>
                             <td class="td_wtjj_inner_right">
                                 <input type="text" id="inputXXBH" class="input_content" placeholder="请输入信息编号">
