--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
@@ -31,7 +31,12 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">点击风铃网首页上方的免费注册按钮，填写资料并认证阅读 "风铃网用户使用协议" 后,勾选本人已仔细阅读并同意，点击注册,便可注册成为风铃网用户</td>
+                    <td colspan="2" class="td_content">
+			1、点击风铃网首页上方的“免费注册”
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_mfzc.png")" /><br/>
+			2、填写资料并认证阅读 "风铃网用户使用协议" 后,勾选本人已仔细阅读并同意，点击注册,便可注册成为风铃网用户<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_zcym.png")" />
+		    </td>
                 </tr>
             </table>
         </div>
@@ -39,7 +44,14 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">点击首页右上方的“您好，请登录”,跳转到登录页面，输入用户名、密码，点击登录</td>
+                    <td colspan="2" class="td_content">
+			1、点击首页右上方的“您好，请登录”,跳转到登录页面<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_dl.png")" /><br/>	
+			2、用户名密码登录:输入用户名、密码，点击登录;<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_dlym.png")" /><br/>
+			3、手机验证码登录:输入手机号并获取手机验证码，点击登录<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_dlym2.png")" />
+		    </td>
                 </tr>
             </table>
         </div>
@@ -48,10 +60,13 @@
             <table>
                 <tr>
                     <td colspan="2" class="td_content">
-                        1、用户注册后是不可以修改用户名的，用户名是您在风铃网上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。风铃网网推荐您使用中文的用户名。<br />
+                        1、用户注册后是不可以修改用户名的，用户名是您在风铃网上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。风铃网推荐您使用中文的用户名。<br />
                         2、按以下操作即可修改密码：<br/>
-                        （1）进入个人中心，账户管理，密码修改<br/>
-                        （2）输入旧密码以及新密码,点击确认<br/>
+                        （1）点击首页右上方的“个人中心”，进入后台管理<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_grzx.png")" /><br/>
+                        （2）打开我的账户->密码设置页面<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_htgl_wdzh_mmsz.png")" /><br/>
+			（3）输入旧密码、新密码和确认密码,点击“完成修改”<br/>
                     </td>
                 </tr>
             </table>
@@ -60,7 +75,14 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">进入个人中心，账户管理，换绑手机，输入新的手机号，和验证码，点击换绑</td>
+                    <td colspan="2" class="td_content">
+			（1）点击首页右上方的“个人中心”，进入后台管理<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_sy_ksdh_grzx.png")" /><br/>
+			（2）打开我的账户->账号绑定->认证手机,点击“换绑”按钮<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_htgl_wdzh_zhbd_hbsj.png")" /><br/>
+			（3）按步骤完成手机换绑<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_htgl_wdzh_zhbd_hbsj_xx.png")" /><br/>
+		    </td>
                 </tr>
             </table>
         </div>
@@ -68,7 +90,10 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">用户注册后是不可以修改用户名的，用户名是您在风铃网上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。风铃网网推荐您使用中文的用户名。 </td>
+                    <td colspan="2" class="td_content">
+			打开帮助中心->联系客服,填写问题,问题类型选择账户被盗,提交问题<br/>
+			<img src="@Url.Content("~/Areas/Business/Css/images/BZZX/bzzx_lxkf_zhbd.png")" /><br/>
+		    </td>
                 </tr>
             </table>
         </div>
