--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -1074,23 +1074,28 @@
             <p class="p_div_foot_right">服务支持</p>
             <ul class="ul_div_foot_right">
                 <li class="li_div_foot_right"><a class="a_div_foot_right">用户服务协议</a></li>
-                <li class="li_div_foot_right"><a class="a_div_foot_right">现金服务协议</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://www.915fl.com/BZZX/BZZX_SY_KSDH_ZHDJYXY?id=5" target="blank">现金服务协议</a></li>
                 <li class="li_div_foot_right"><a class="a_div_foot_right">诚信建设</a></li>
-                <li class="li_div_foot_right"><a class="a_div_foot_right">举报平台</a></li>
+                @*<li class="li_div_foot_right"><a class="a_div_foot_right">举报平台</a></li>*@
             </ul>
         </div>
         <div class="div_foot_right">
             <p class="p_div_foot_right">帮助中心</p>
             <ul class="ul_div_foot_right">
-                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=CJWT">常见问题</a></li>
-                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=LXKF">联系客服</a></li>
-                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=YJFK">网站建议</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://www.915fl.com/BZZX/BZZX?TYPE=CJWT" target="blank">常见问题</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://www.915fl.com/BZZX/BZZX?TYPE=LXKF" target="blank">联系客服</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://www.915fl.com/BZZX/BZZX?TYPE=YJFK" target="blank">网站建议</a></li>
             </ul>
         </div>
         <p class="p_div_foot_bottom"></p>
     </div>
     <div class="div_bottom">
-        <p class="p_div_bottom">©2018 福建沐晗信息技术有限公司</p>
-        <p class="p_div_bottom reduce">闽ICP备18003746号</p>
+        <p class="p_div_bottom"><span class="p_div_bottom_copyright">©</span>2018 福建沐晗信息技术有限公司&nbsp;&nbsp;客服及举报电话：400-043-5650 | 031-88342390（周一至周五，9:00-18:00）</p>
+        <p class="p_div_bottom_reduce">闽ICP备18003746号-1</p>
+	<p class="p_div_bottom">
+	    <img class="img_div_bottom" src="@Url.Content("~/Areas/Business/Css/images/SY/WZJB/sy_qyxyxx.png")" />
+	    <img class="img_div_bottom" src="@Url.Content("~/Areas/Business/Css/images/SY/WZJB/sy_wljbappxz.png")" href="http://report.12377.cn:13225/toreportinputNormal_anis.do" />
+	    <img class="img_div_bottom" src="@Url.Content("~/Areas/Business/Css/images/SY/WZJB/sy_wsyhxxjbzq.png")" href="http://www.12377.cn/node_548446.htm?PGTID=0d100000-0013-0d7a-7a03-2802f15ed53d&ClickID=13" />
+	</p>
     </div>
 }
