--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
@@ -23,10 +23,13 @@
 /*首页_头部导航*/
 .div_head_nav {background-color: #ffffff;width: 1200px;height: 39px;}
 .div_head_nav .ul_head_nav {height: 39px;display: block;padding: 0;width: 100%;border-bottom: 2px solid #bc6ba6;}
-.div_head_nav .ul_head_nav .li_head_nav {background: #ffffff;text-align: center;color: #bc6ba6;height: 37px;font-size: 16px;font-weight: 700;float: left;display: inline-block;padding: 6px 17px;border-top-left-radius: 4px;border-top-right-radius: 4px;}
+.div_head_nav .ul_head_nav .li_head_nav {background: #ffffff;text-align: center;color: #bc6ba6;height: 37px;font-size: 16px;font-weight: 700;float: left;display: inline-block;padding: 6px 27px;border-top-left-radius: 4px;border-top-right-radius: 4px;}
 .div_head_nav .ul_head_nav .li_head_nav:hover{cursor:pointer;background: #bc6ba6;color: #ffffff;}
-.div_head_nav .ul_head_nav .li_head_nav_dropdown{cursor:pointer;background: #ffffff;text-align: center;color: #bc6ba6;height: 37px;font-size: 16px;font-weight: 700;float: left;display: inline-block;padding: 6px 17px;border-top-left-radius: 4px;border-top-right-radius: 4px;}
+.div_head_nav .ul_head_nav .li_head_nav_dropdown{cursor:pointer;background: #ffffff;position:relative;border-left:1px solid #ffffff;border-right:1px solid #ffffff;border-top:1px solid #ffffff;text-align: center;margin:0 3px;color: #bc6ba6;height: 37px;font-size: 16px;font-weight: 700;float: left;display: inline-block;padding: 6px 15px;}
 .div_head_nav .ul_head_nav .li_head_nav_dropdown .i_head_nav {background-image: url(../images/head_nav_down.png);display: inline-block;width: 14px;height: 14px;margin-left: 5px;}
+.div_head_nav .ul_head_nav .li_head_nav_dropdown .div_head_nav_dropdown{border-left:1px solid #bc6ba6;border-bottom:1px solid #bc6ba6;border-right:1px solid #bc6ba6;position:absolute;left:-1px;top:36px;background-color:#ffffff;display:none;}
+#div_head_flapp_ewm{background-image:url(../images/SY/TBDH/app_ewm.png);background-size:100%;background-repeat:no-repeat;margin-top:10px;padding:5px 5px;}
+#div_head_flgzh_ewm{background-image:url(../images/SY/TBDH/gzh_ewm.png);background-size:100%;background-repeat:no-repeat;margin-top:0px;padding:5px 5px;}
 
 /*搜索结果下拉框*/
 .div_select_dropdown {top:-10px; border-top:none; width: 499px;height:320px; position: relative;z-index: 1001;display:none;}
