--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/SY.css
@@ -1,6 +1,7 @@
 ﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
 
 /*首页_主体_上部*/
+.div_body { width: 1200px;overflow-x: hidden;}
 .div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
 .div_body .div_body_top .div_body_top_inner{ width: 918px;height: 120px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
 .div_body .div_body_top .div_body_top_inner .p_body_middle_left_title{font-size: 18px;border-bottom: 2px solid #bc6ba6;display: block;height: 40px;color: #bc6ba6;font-weight:bold;}
