--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -1069,8 +1069,8 @@
             <p class="p_div_foot_right">
                 关于风铃网
                 <ul class="ul_div_foot_right">
-                    <li class="li_div_foot_right"><a class="a_div_foot_right">了解风铃网</a></li>
-                    <li class="li_div_foot_right"><a class="a_div_foot_right">加入风铃网</a></li>
+                    <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://www.915fl.com/BZZX/BZZX_GYWM" target="blank">了解风铃网</a></li>
+                    <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://www.915fl.com/BZZX/BZZX_GYWM" target="blank">加入风铃网</a></li>
                 </ul>
         </div>
         <div class="div_foot_right">
